--- a/Cisean 2/index.html
+++ b/Cisean 2/index.html
@@ -58,7 +58,7 @@
 						<div class="features-row">
 							<section>
 								<span class="icon solid major fa-sitemap accent3"></span>
-								<h3>Servicios</h3>
+								<h3>Postgrado</h3>
 								<a href="#" class="button alt">Ver</a>
 							</section>
 							<section>
@@ -93,23 +93,34 @@
 				</section>
 
 			<!-- CTA -->
-			<section id="cta">
 
-					<h2>Sign up for beta access</h2>
-					<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
-
-					<form>
-						<div class="row gtr-50 gtr-uniform">
-							<div class="col-8 col-12-mobilep">
-								<input type="email" name="email" id="email" placeholder="Email Address" />
+				<section class="container medium">
+					<div class="box">
+						<center><h2>Solicita Información</h2></center>
+						<form method="post" action="#">
+							<div class="row gtr-50 gtr-uniform">
+								<div class="col-6 col-12-mobilep">
+									<input type="text" name="name" id="name" value="" placeholder="Name" />
+								</div>
+								<div class="col-6 col-12-mobilep">
+									<input type="email" name="email" id="email" value="" placeholder="Email" />
+								</div>
+								<div class="col-12">
+									<input type="text" name="subject" id="subject" value="" placeholder="Subject" />
+								</div>
+								<div class="col-12">
+									<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+								</div>
+								<div class="col-12">
+									<ul class="actions special">
+										<li><input type="submit" value="Send Message" /></li>
+									</ul>
+								</div>
 							</div>
-							<div class="col-4 col-12-mobilep">
-								<input type="submit" value="Sign Up" class="fit" />
-							</div>
-						</div>
-					</form>
+						</form>
+					</div>
+				</section>
 
-				</section>->
 
 			<!-- Footer -->
 				<footer id="footer">
